k8s/30-ingress/10-ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-door-frontend
                port:
                  number: 80
